--- a/guilhermejp/index.html
+++ b/guilhermejp/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Guilherme Pereira</title>
+    <title>Guilherme J. Pereira - Desenvolvedor Full Stack Web</title>
+    <meta name="description" content="Dev FullStack com experiência em React, Node.js. Crio soluções web para empresas e pequenos empreendedores. Explore meu portfólio e veja meus projetos.">
   </head>
   <body>
     <div id="root"></div>
